src/objects/QPMS__Training_History__c.object
<CustomObject>
    <description>This object  is used to store junction object information</description>
    <fields>
        <fullName>QPMS__ActionStatus__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Attendance_del__c</fullName>
        <description>this field store attendance related audit trail</description>
        <label>Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Absent</fullName>
                </value>
                <value>
                    <fullName>No Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Course_Sessions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Sessions</label>
        <referenceTo>QPMS__Course_Sessions__c</referenceTo>
        <relationshipLabel>Training Historys</relationshipLabel>
        <relationshipName>Training_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>QPMS__Course__c</referenceTo>
        <relationshipLabel>Training Historys</relationshipLabel>
        <relationshipName>Training_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Training Historys</relationshipLabel>
        <relationshipName>Training_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <description>To save api name of the field</description>
        <label>FieldApiName</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <description>To save the filed name</description>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Job_Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Function</label>
        <referenceTo>QPMS__Job_Function__c</referenceTo>
        <relationshipLabel>Training Historys</relationshipLabel>
        <relationshipName>Training_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <formula>LastModifiedBy.FirstName  + &apos; &apos; +  LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Modified__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <description>To store new value</description>
        <label>NewValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Sub_Parent__c</fullName>
        <label>Sub Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <description>To store old value</description>
        <label>OldValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Participant_Name__c</fullName>
        <label>Participant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Person_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is lookup to person profile  object</description>
        <label>Person Profile</label>
        <referenceTo>QPMS__Person_Profile__c</referenceTo>
        <relationshipLabel>Training Historys</relationshipLabel>
        <relationshipName>Training_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Prerequisite_Courses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preeequisite Courses</label>
        <referenceTo>QPMS__Course__c</referenceTo>
        <relationshipLabel>Training Historys (PreRequisite Courses)</relationshipLabel>
        <relationshipName>Training_Historys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <label>Sub Parent Old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Session Details</fullName>
                </value>
                <value>
                    <fullName>Course Details</fullName>
                </value>
                <value>
                    <fullName>Course Init</fullName>
                </value>
                <value>
                    <fullName>Course Applicable To</fullName>
                </value>
                <value>
                    <fullName>JobFunction Init</fullName>
                </value>
                <value>
                    <fullName>CourseProfilejobFunction</fullName>
                </value>
                <value>
                    <fullName>PreRequisiteCourse</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Participants</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>Users</fullName>
                </value>
                <value>
                    <fullName>Job Function</fullName>
                </value>
                <value>
                    <fullName>Person Profile Init</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Cloned Job Function</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Documents-DOC-002213-2019(1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PersonProfileCourseSession</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is for to show the value is created/updated</description>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <label>Training History</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Sub_Parent__c</columns>
        <columns>QPMS__FieldName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TH-{00000}</displayFormat>
        <label>Training History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>